@@ -4,7 +4,7 @@
   <!ENTITY app "<application>Genius Mathematics Tool</application>">
   <!ENTITY appname "Genius">
   <!ENTITY appversion "1.0.21">
-  <!ENTITY date "July 2016">
+  <!ENTITY date "August 2016">
 
   <!ENTITY legal SYSTEM "legal.xml">
 
@@ -8791,6 +8791,9 @@ and has period <userinput>b-a</userinput>.</para>
 	    <varname>x1</varname>,<varname>y1</varname>,
 	    <varname>x2</varname>,<varname>y2</varname> can be replaced by an
 	    <varname>n</varname> by 2 matrix for a longer polyline.
+	    Alternatively the vector <varname>v</varname> may be a column vector of complex numbers,
+	    that is an <varname>n</varname> by 1 matrix and each complex number is then
+	    considered a point in the plane.
           </para>
           <para>
 	    Extra parameters can be added to specify line color, thickness,
@@ -8840,6 +8843,16 @@ and has period <userinput>b-a</userinput>.</para>
 <prompt>genius></prompt> <userinput>for r=0.0 to 1.0 by 0.1 do LinePlotDrawLine([0,0;1,r],"color",[r,(1-r),0.5],"window",[0,1,0,1])</userinput>
 </screen>
           </para>
+	  <para>
+		  Unlike many other functions that do not care if they take a
+		  column or a row vector, if specifying points as a vector of
+		  complex values, due to possible ambiguities, it must always
+		  be given as a column vector.
+	  </para>
+	  <para>
+		  Specifying <varname>v</varname> as a column vector of complex numbers is
+		  implemented from version 1.0.22 and onwards.
+	  </para>
          </listitem>
         </varlistentry>
 
@@ -8853,9 +8866,12 @@ and has period <userinput>b-a</userinput>.</para>
 		  The input can be an <varname>n</varname> by 2 matrix
 		  for <varname>n</varname> different points.  This function has essentially the same
 		  input as <link linkend="gel-function-LinePlotDrawLine">LinePlotDrawLine</link>.
+		  Alternatively the vector <varname>v</varname> may be a column vector of complex numbers,
+		  that is an <varname>n</varname> by 1 matrix and each complex number is then
+		  considered a point in the plane.
           </para>
           <para>
-	    Extra parameters can be added to specify line color, thickness,
+	    Extra parameters can be added to specify color, thickness,
 	    the plotting window, or legend.
 	    You can do this by adding an argument string <userinput>"color"</userinput>, 
 	    <userinput>"thickness"</userinput>,
@@ -8890,10 +8906,22 @@ and has period <userinput>b-a</userinput>.</para>
           <screen><prompt>genius></prompt> <userinput>LinePlotDrawPoints(0,0,"color","blue","thickness",3)</userinput>
 <prompt>genius></prompt> <userinput>LinePlotDrawPoints([0,0;1,-1;-1,-1])</userinput>
 <prompt>genius></prompt> <userinput>LinePlotDrawPoints(RungeKuttaFull(`(x,y)=y,0,3,100),"color","blue","legend","The Solution")</userinput>
+<prompt>genius></prompt> <userinput>LinePlotDrawPoints([1;1+1i;1i;0],"thickness",5)</userinput>
+<prompt>genius></prompt> <userinput>LinePlotDrawPoints(ApplyOverMatrix((0:6)',`(k)=exp(k*2*pi*1i/7)),"thickness",3,"legend","The 7th roots of unity")</userinput>
 </screen>
           </para>
 	  <para>
-		  Available from version 1.0.18 onwards.
+		  Unlike many other functions that do not care if they take a
+		  column or a row vector, if specifying points as a vector of
+		  complex values, due to possible ambiguities, it must always
+		  be given as a column vector.  Therefore, notice in the
+		  last example the transpose of the vector <userinput>0:6</userinput>
+		  to make it into a column vector.
+	  </para>
+	  <para>
+		  Available from version 1.0.18 onwards.  Specifying
+		  <varname>v</varname> as a column vector of complex numbers is
+		  implemented from version 1.0.22 and onwards.
 	  </para>
          </listitem>
         </varlistentry>
