@@ -1,3 +1,14 @@
+Wed Aug 24 17:58:18 2016  Jiri (George) Lebl <jirka@5z.com>
+
+	* examples/complex-analysis-mesh.gel,
+	  examples/complex-analysis-wandering-ball.gel: two visualizations of
+	  complex mappings
+	
+	* src/graphing.c: LinePlotDrawPoints and LinePlotDrawLine now accept
+	  a column vector of complex numbers to draw.
+
+	* help/C/genius.xml: document the above.
+
 Sat Jul 09 00:14:53 2016  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/genius.xml, src/funclib.c,
